:lipstick: Fix horizontal scroll on main page

--- a/src/components/organisms/Footer/Footer.module.css
+++ b/src/components/organisms/Footer/Footer.module.css
@@ -9,3 +9,13 @@
 .right {
   margin-left: auto;
 }
+
+@media screen and (max-width: 768px) {
+  .root {
+    flex-flow: column nowrap;
+  }
+
+  .right {
+    margin-left: initial;
+  }
+}
